// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar renders progress bar component with all props 1`] = `
<InjectLayout
  borderRadius="border-radius-large"
>
  <styled.div
    $mask={true}
    aria-valuemax={100}
    aria-valuemin={0}
    aria-valuenow={100}
    className="tw-progress-bar"
    overlay={true}
    role="progressbar"
    size="xs"
    status="success"
  >
    <InjectLayout
      borderRadius={
        Object {
          "bottomLeft": "border-radius-large",
          "topLeft": "border-radius-large",
        }
      }
      display="block"
    >
      <styled.div
        animationDirection="down"
        animationDuration={10}
        data-a-target="tw-progress-bar-animation"
        inherit={true}
        onAnimationEnd={[MockFunction]}
        overlay={true}
        paused={true}
        status="success"
        value={100}
      />
    </InjectLayout>
  </styled.div>
</InjectLayout>
`;

exports[`ProgressBar renders progress bar component with required props 1`] = `
<InjectLayout
  borderRadius="border-radius-large"
>
  <styled.div
    aria-valuemax={100}
    aria-valuemin={0}
    className="tw-progress-bar"
    role="progressbar"
    size="default"
    status="default"
  >
    <InjectLayout
      borderRadius={
        Object {
          "bottomLeft": "border-radius-large",
          "topLeft": "border-radius-large",
        }
      }
      display="block"
    >
      <styled.div
        data-a-target="tw-progress-bar-animation"
        status="default"
      />
    </InjectLayout>
  </styled.div>
</InjectLayout>
`;
